log/build_2023-05-05_01-17-37/yolov8_ros/stdout_stderr.log
running egg_info
writing ../../../build/yolov8_ros/yolov8_ros.egg-info/PKG-INFO
writing dependency_links to ../../../build/yolov8_ros/yolov8_ros.egg-info/dependency_links.txt
writing entry points to ../../../build/yolov8_ros/yolov8_ros.egg-info/entry_points.txt
writing requirements to ../../../build/yolov8_ros/yolov8_ros.egg-info/requires.txt
writing top-level names to ../../../build/yolov8_ros/yolov8_ros.egg-info/top_level.txt
reading manifest file '../../../build/yolov8_ros/yolov8_ros.egg-info/SOURCES.txt'
writing manifest file '../../../build/yolov8_ros/yolov8_ros.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /workspaces/isaac_ros-dev/install/yolov8_ros/lib/python3.8/site-packages/yolov8_ros/yolov8_node.py to yolov8_node.cpython-38.pyc
running install_data
  File "/workspaces/isaac_ros-dev/install/yolov8_ros/lib/python3.8/site-packages/yolov8_ros/yolov8_node.py", line 92
    convert image + predict
            ^
SyntaxError: invalid syntax

running install_egg_info
removing '/workspaces/isaac_ros-dev/install/yolov8_ros/lib/python3.8/site-packages/yolov8_ros-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../../build/yolov8_ros/yolov8_ros.egg-info to /workspaces/isaac_ros-dev/install/yolov8_ros/lib/python3.8/site-packages/yolov8_ros-0.0.0-py3.8.egg-info
running install_scripts
Installing yolov8_node script to /workspaces/isaac_ros-dev/install/yolov8_ros/lib/yolov8_ros
writing list of installed files to '/workspaces/isaac_ros-dev/build/yolov8_ros/install.log'
